--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resume Builder</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <ul class="navlist">
+            <div class="logo"><img src="resume_fo_icon" alt="logo"></div>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#3About Us">About Us</a></li>
+            <li><a href="#Contact Us">Contact Us</a></li>
+            <li><a href="#Create Resume">Create Resume</a></li>
+            <li><a href="#Terms And Conditions">Terms And Conditions</a></li>
+            <li><a href="#SignUp/Login">SignUp/Login</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
