--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Resume Builder</title>
 </head>
 <body>
@@ -11,12 +12,16 @@
         <ul class="navlist">
             <div class="logo"><img src="resume_fo_icon" alt="logo"></div>
             <li><a href="#home">Home</a></li>
-            <li><a href="#3About Us">About Us</a></li>
+            <li><a href="#About Us">About Us</a></li>
             <li><a href="#Contact Us">Contact Us</a></li>
             <li><a href="#Create Resume">Create Resume</a></li>
             <li><a href="#Terms And Conditions">Terms And Conditions</a></li>
             <li><a href="#SignUp/Login">SignUp/Login</a></li>
         </ul>
+        <div class="rightnav">
+            <input type="text" name="Search" id="Search">
+            <button class="btn btn-sm">Search</button>
+        </div>
     </nav>
 </body>
 </html>
