styling the navigation bar

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,14 +8,13 @@
     <title>Resume Builder</title>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar background">
         <ul class="navlist">
-            <div class="logo"><img src="resume_fo_icon" alt="logo"></div>
+            <div class="logo"><img src="resume_for_icon.jpg" alt="logo"></div>
             <li><a href="#home">Home</a></li>
             <li><a href="#About Us">About Us</a></li>
             <li><a href="#Contact Us">Contact Us</a></li>
             <li><a href="#Create Resume">Create Resume</a></li>
-            <li><a href="#Terms And Conditions">Terms And Conditions</a></li>
             <li><a href="#SignUp/Login">SignUp/Login</a></li>
         </ul>
         <div class="rightnav">
