--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,9 +8,10 @@
     <title>Resume Builder</title>
 </head>
 <body>
-    <nav class="navbar background">
+    <div class="background">
+    <nav class="navbar">
         <ul class="navlist">
-            <div class="logo"><img src="resume_for_icon.jpg" alt="logo"></div>
+            <div class="logo"><img src="/Images/resume_for_icon.jpg" alt="logo"></div>
             <li><a href="#home">Home</a></li>
             <li><a href="#About Us">About Us</a></li>
             <li><a href="#Contact Us">Contact Us</a></li>
@@ -21,6 +22,26 @@
             <input type="text" name="Search" id="Search">
             <button class="btn btn-sm">Search</button>
         </div>
+        <style type="text/css">
+        </style>
     </nav>
+    <section class="firstSection">
+        <div class="box-main">
+            <div class="firsthalf">
+                <p class="textbig">I am Manish Sharma.My father's name is Mr.yatendra Kumar Sharma</p>
+                <p class="textsmall">I am persuing b.tech Cse from gla University.I love to
+                    play Cricket.I also represented my university Cricket Team.</p>
+            </div>
+            <div class="button">
+                <button class="btn">Subscribe</button>
+                <button class="btn">Watch Video</button>
+            </div>
+            <div class="secondhalf">
+                <img src="/Images/image1.jpg" alt="helloimage">
+            </div>
+        </div>
+
+    </section>
+</div>
 </body>
 </html>
