Create a sticky nav bar

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,19 +29,19 @@
     <section class="firstSection">
         <div class="box-main">
             <div class="firsthalf">
-                <p class="textbig">I am Manish Sharma.My father's name is Mr.yatendra Kumar Sharma</p>
-                <p class="textsmall">I am persuing b.tech Cse from gla University.I love to
-                    play Cricket.I also represented my university Cricket Team.</p>
-            </div>
-            <div class="button">
-                <button class="btn">Subscribe</button>
-                <button class="btn">Watch Video</button>
+                <p class="textbig">It is an application that simplifies the task of creating a resume
+                     for individuals.</p>
+                <p class="textsmall">This pretends to be a useful web application in particular for 
+                    an academic and research environment.</p>
+                <div class="button">
+                    <button class="btn">Subscribe</button>
+                    <button class="btn">Watch Video</button>
+                </div>
             </div>
             <div class="secondhalf">
-                <img src="/Images/image1.jpg" alt="helloimage">
+                <img src="/Images/resume_for_icon.jpg" alt="feature image">
             </div>
         </div>
-
     </section>
 </div>
 </body>
