--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,8 +29,7 @@
     <section class="firstSection">
         <div class="box-main">
             <div class="firsthalf">
-                <p class="textbig">It is an application that simplifies the task of creating a resume
-                     for individuals.</p>
+                <p class="textbig">Create your Resume here</p>
                 <p class="textsmall">This pretends to be a useful web application in particular for 
                     an academic and research environment.</p>
                 <div class="button">
