Adding more styling to button

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -42,6 +42,10 @@
             </div>
         </div>
     </section>
+    <section class="secRight">
+        <p class="sectionTag">You can create effective resume for your jobs</p>
+        <p class="sectionSubtag">Lorem, ipsum quisquam, natus atque. Inventore, aliquam assumenda.</p>
+    </section>
 </div>
 </body>
 </html>
