--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,6 +9,7 @@
     <title>Resume Builder</title>
 </head>
 <body>
+<div>
     <div class="background">
     <nav class="navbar">
         <ul class="navlist">
@@ -26,6 +27,7 @@
         <style type="text/css">
         </style>
     </nav>
+    </div>
     <section class="firstSection">
         <div class="box-main">
             <div class="firsthalf">
@@ -45,6 +47,9 @@
     <section class="secRight">
         <p class="sectionTag">You can create effective resume for your jobs</p>
         <p class="sectionSubtag">Lorem, ipsum quisquam, natus atque. Inventore, aliquam assumenda.</p>
+        <div class="thumbnail">
+            <img src="/Images/resume_for_icon.jpg" alt="feature image" class="imgfluid">
+        </div>
     </section>
 </div>
 </body>
