--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,6 @@
         <style type="text/css">
         </style>
     </nav>
-    </div>
     <section class="firstSection">
         <div class="box-main">
             <div class="firsthalf">
@@ -44,9 +43,13 @@
             </div>
         </div>
     </section>
+    </div>
     <section class="secRight">
         <p class="sectionTag">You can create effective resume for your jobs</p>
-        <p class="sectionSubtag">Lorem, ipsum quisquam, natus atque. Inventore, aliquam assumenda.</p>
+        <p class="sectionSubtag">Lorem, ipsum quisquam, natus atque. Inventore, aliquam assumenda. 
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, est! Non 
+            molestias repellendus vero aspernatur. Nobis possimus repudiandae deserunt
+             rerum numquam aliquid sint architecto, itaque dolore quis doloremque, iste sit?</p>
         <div class="thumbnail">
             <img src="/Images/resume_for_icon.jpg" alt="feature image" class="imgfluid">
         </div>
