--- a/HTML/index.html
+++ b/HTML/index.html
@@ -45,13 +45,27 @@
     </section>
     </div>
     <section class="secRight">
-        <p class="sectionTag">You can create effective resume for your jobs</p>
-        <p class="sectionSubtag">Lorem, ipsum quisquam, natus atque. Inventore, aliquam assumenda. 
+        <div class="para">
+        <p class="textbig">You can create effective resume</p>
+        <p class="textsmall">Lorem, ipsum quisquam, natus atque. Inventore, aliquam assumenda. 
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, est! Non 
             molestias repellendus vero aspernatur. Nobis possimus repudiandae deserunt
              rerum numquam aliquid sint architecto, itaque dolore quis doloremque, iste sit?</p>
         <div class="thumbnail">
             <img src="/Images/resume_for_icon.jpg" alt="feature image" class="imgfluid">
+        </div>
+        </div>
+    </section>
+    <section class="secLeft">
+        <div class="para">
+        <p class="textbig">You can create effective resume</p>
+        <p class="textsmall">Lorem, ipsum quisquam, natus atque. Inventore, aliquam assumenda. 
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, est! Non 
+            molestias repellendus vero aspernatur. Nobis possimus repudiandae deserunt
+             rerum numquam aliquid sint architecto, itaque dolore quis doloremque, iste sit?</p>
+        <div class="thumbnail">
+            <img src="/Images/resume_for_icon.jpg" alt="feature image" class="imgfluid">
+        </div>
         </div>
     </section>
 </div>
