--- a/HTML/index.html
+++ b/HTML/index.html
@@ -47,10 +47,11 @@
     <section class="secRight">
         <div class="para">
         <p class="textbig">You can create effective resume</p>
-        <p class="textsmall">Lorem, ipsum quisquam, natus atque. Inventore, aliquam assumenda. 
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, est! Non 
-            molestias repellendus vero aspernatur. Nobis possimus repudiandae deserunt
-             rerum numquam aliquid sint architecto, itaque dolore quis doloremque, iste sit?</p>
+        <p class="textsmall">Highlight your career experience, skills, and knowledge in a resume template
+             from Adobe Spark. Your resume will stand out in these sleek, contemporary layouts that you can
+              customize and share with potential employers. Explore a vast library of simple yet professional
+               designs that can land you that next interview. Creating a resume that distinguishes you from 
+            the crowd is as simple as selecting a template, editing it, and sharing in any format you choose</p>
         <div class="thumbnail">
             <img src="/Images/resume_for_icon.jpg" alt="feature image" class="imgfluid">
         </div>
