--- a/HTML/index.html
+++ b/HTML/index.html
@@ -53,7 +53,7 @@
                designs that can land you that next interview. Creating a resume that distinguishes you from 
             the crowd is as simple as selecting a template, editing it, and sharing in any format you choose</p>
         <div class="thumbnail">
-            <img src="/Images/resume_for_icon.jpg" alt="feature image" class="imgfluid">
+            <img src="/Images/download.jpg" alt="feature image" class="imgfluid">
         </div>
         </div>
     </section>
