--- a/HTML/login.html
+++ b/HTML/login.html
@@ -11,11 +11,10 @@
     <nav class="navbar">
         <ul class="navlist">
             <div class="logo"><img src="/Images/resume_for_icon.jpg" alt="logo"></div>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#About Us">About Us</a></li>
-            <li><a href="#Contact Us">Contact Us</a></li>
-            <li><a href="#Create Resume">Create Resume</a></li>
-            <li><a href="#SignUp/Login">SignUp/Login</a></li>
+            <li><a href="/HTML/index.html">Home</a></li>
+            <li><a href="/HTML/AboutUs.html">About Us</a></li>
+            <li><a href="/HTML/CreateResume.html">Create Resume</a></li>
+            <li><a href="/HTML/login.html">SignUp/Login</a></li>
         </ul>
         <div class="rightnav">
             <input type="text" name="Search" id="Search">
