--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,6 +21,9 @@
         <style type="text/css">
         </style>
     </nav>
+    <p>
+        Hello welcome to the home page of Resume builder project
+    </p>
 </div>
 </body>
 </html>
