--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -19,6 +19,9 @@
         <style type="text/css">
         </style>
     </nav>
+    <p>
+        Hello welcome to the About Us page of Resume builder project
+    </p>
 </div>
 </body>
 </html>
