--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -21,7 +21,7 @@
     </nav>
 </div>
 <p>
-    Hello welcome to the About Us page of Resume builder project
+    Hello this is our about us page.
 </p>
 </body>
 </html>
