--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -19,6 +19,10 @@
         <style type="text/css">
         </style>
     </nav>
+    <div class="team-section">
+        <h1>Our Team</h1>
+
+    </div>
 </div>
 <p>
     Hello this is our about us page.
