--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -19,10 +19,14 @@
         <style type="text/css">
         </style>
     </nav>
-    <div class="team-section">
+</div>
+<div class="team-section">
         <h1>Our Team</h1>
-
-    </div>
+<div class="ps">
+    <a href="#"><img src="181500538.jpg" alt=""></a>
+    <a href="#"><img src="181500368.jpg" alt=""></a>
+    <a href="#"><img src="181500469.jpg" alt=""></a>
+</div>        
 </div>
 <p>
     Hello this is our about us page.
