--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -24,8 +24,10 @@
         <h1>Our Team</h1>       
 </div>
 <div class="ps">
-    <a href="#"><img src="181500538.jpg" alt=""></a>
-    <a href="#"><img src="181500368.jpg" alt=""></a>
+    <a href="#"><img src="/Images/181500368.jpg" alt=""></a>
+    <a href="#"><img src="/Images/181500538.jpg" alt=""></a>
+    <a href="#"><img src="/Images/181500469.jpg" alt=""></a>
+
     
 </div> 
 <p>
