--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/Images/resume_for_icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/AboutUsStyle.css">
     <title>ResumeBuilder</title>
 </head>
 <body>
@@ -21,17 +22,12 @@
     </nav>
 </div>
 <div class="team-section">
-        <h1>Our Team</h1>       
-</div>
-<div class="ps">
-    <a href="#"><img src="/Images/181500368.jpg" alt=""></a>
-    <a href="#"><img src="/Images/181500538.jpg" alt=""></a>
-    <a href="#"><img src="/Images/181500469.jpg" alt=""></a>
-
-    
+        <h1>Our Team</h1> 
+        <div class="ps">
+            <a href="#"><img src="/Images/181500368.jpg" alt=""></a>
+            <a href="#"><img src="/Images/181500538.jpg" alt=""></a>
+            <a href="#"><img src="/Images/181500469.jpg" alt=""></a>   
+        </div>      
 </div> 
-<p>
-    Hello this is our about us page.
-</p>
 </body>
 </html>
