--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -22,7 +22,8 @@
     </nav>
 </div>
 <div class="team-section">
-        <h1>Our Team</h1> 
+        <h1>Our Team</h1>
+        <span class="border"></span> 
         <div class="ps">
             <a href="#"><img src="/Images/181500368.jpg" alt=""></a>
             <a href="#"><img src="/Images/181500538.jpg" alt=""></a>
