--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -29,6 +29,33 @@
             <a href="#"><img src="/Images/181500538.jpg" alt=""></a>
             <a href="#"><img src="/Images/181500469.jpg" alt=""></a>   
         </div>      
+
+        <div class="section" id="181500368">
+            <span class="name">Manish Sharma</span>
+            <span class="border"></span>
+            <p>
+                Bachelor Of Technology. Computer Science and Engineering. III year.
+            </p>
+
+        </div>
+
+        <div class="section" id="181500538">
+            <span class="name">Rahul Saxena</span>
+            <span class="border"></span>
+            <p>
+                Bachelor Of Technology. Computer Science and Engineering. III year.
+            </p>
+
+        </div>
+
+        <div class="section" id="181500469">
+            <span class="name">Prakhar Agarwal</span>
+            <span class="border"></span>
+            <p>
+                Bachelor Of Technology. Computer Science and Engineering. III year.
+            </p>
+
+        </div>
 </div> 
 </body>
 </html>
