--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -25,9 +25,9 @@
         <h1>Our Team</h1>
         <span class="border"></span> 
         <div class="ps">
-            <a href="#"><img src="/Images/181500368.jpg" alt=""></a>
-            <a href="#"><img src="/Images/181500538.jpg" alt=""></a>
-            <a href="#"><img src="/Images/181500469.jpg" alt=""></a>   
+            <a href="#181500368"><img src="/Images/181500368.jpg" alt=""></a>
+            <a href="#181500538"><img src="/Images/181500538.jpg" alt=""></a>
+            <a href="#181500469"><img src="/Images/181500469.jpg" alt=""></a>   
         </div>      
 
         <div class="section" id="181500368">
