--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -34,7 +34,7 @@
             <span class="name">Manish Sharma</span>
             <span class="border"></span>
             <p>
-                Bachelor Of Technology. Computer Science and Engineering. III year.
+                <h3>Founder</h3>He is currently pursuing Bachelor Of Technology From GLA University. He is currently in III year. A budding web developer and always up for learning new skills.
             </p>
 
         </div>
@@ -43,7 +43,7 @@
             <span class="name">Rahul Saxena</span>
             <span class="border"></span>
             <p>
-                Bachelor Of Technology. Computer Science and Engineering. III year.
+                <h3>Founder</h3>He is currently pursuing Bachelor Of Technology From GLA University. He is currently in III year. Having a deep interest in web developing and always up for learning new skills.
             </p>
 
         </div>
