--- a/HTML/login.html
+++ b/HTML/login.html
@@ -20,8 +20,42 @@
         </style>
     </nav>
 </div>
-<p>
-    Hello welcome to the login page of Resume builder project
-</p>
+<div class="login">
+    <div class="login-box">
+        <div class="btn-box">
+            <div id="btn"></div>
+            <button type="button" class="toggle" onclick="login()">Login</button>
+            <button type="button" class="toggle" onclick="register()">Register</button>
+        </div>
+        <form id="login" class="form-input">
+            <input type="text" class="input-field" placeholder="Username" required>
+            <input type="password" class="input-field" placeholder="Enter Password" required>
+            <input type="checkbox" class="check-box"><span>Remember Password</span>
+            <button type="submit" class="submit-btn">Log In</button>
+        </form>
+        <form id="register" class="form-input">
+            <input type="text" class="input-field" placeholder="Username" required>
+            <input type="email" class="input-field" placeholder="Email id" required>
+            <input type="password" class="input-field" placeholder="Enter Password" required>
+            <input type="checkbox" class="check-box"><span>I agree to the terms and conditons</span>
+            <button type="submit" class="submit-btn">Register</button>
+        </form>
+    </div>
+    <script>
+        var x = document.getElementById("login");
+        var y = document.getElementById("register");
+        var z = document.getElementById("btn");
+        function register(){
+            x.style.left= "-400px";
+            y.style.left= "50px";
+            z.style.left= "110px";
+        }
+        function login(){
+            x.style.left= "50px";
+            y.style.left= "450px";
+            z.style.left= "0";
+        }
+    </script>
+</div>
 </body>
 </html>
