--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Images/resume_for_icon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/Images/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/CSS/style.css">
     <title>ResumeBuilder</title>
 </head>
 <body>
 <div class="background">
     <nav class="navbar">
-        <div class="logo"><img src="/Images/resume_for_icon.jpg" alt="logo"></div>
+        <div class="logo"><img src="/Images/logo.jpg" alt="logo"></div>
         <ul class="navlist">
             <li><a href="/HTML/index.html">Home</a></li>
             <li><a href="/HTML/AboutUs.html">About Us</a></li>
@@ -25,5 +25,13 @@
 <p>
     Hello welcome to the home page of Resume builder project
 </p>
+<div class="content">
+    <div class="first-content">
+
+    </div>
+    <div class="second-content">
+        <img src="" alt="">
+    </div>
+</div>
 </body>
 </html>
