--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Images/resume_for_icon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/Images/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/CSS/style.css">
     <title>ResumeBuilder</title>
 </head>
@@ -10,7 +10,7 @@
 <div class="background">
     <nav class="navbar">
         <ul class="navlist">
-            <div class="logo"><img src="/Images/resume_for_icon.jpg" alt="logo"></div>
+            <div class="logo"><img src="/Images/logo.jpg" alt="logo"></div>
             <li><a href="/HTML/index.html">Home</a></li>
             <li><a href="/HTML/AboutUs.html">About Us</a></li>
             <li><a href="/HTML/CreateResume.html">Create Resume</a></li>
