--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,29 +9,29 @@
     <title>ResumeBuilder</title>
 </head>
 <body>
-<div class="background">
-    <nav class="navbar">
-        <div class="logo"><img src="/Images/logo.jpg" alt="logo"></div>
-        <ul class="navlist">
-            <li><a href="/HTML/index.html">Home</a></li>
-            <li><a href="/HTML/AboutUs.html">About Us</a></li>
-            <li><a href="/HTML/CreateResume.html">Create Resume</a></li>
-            <li><a href="/HTML/login.html">SignUp/Login</a></li>
-        </ul>
-        <style type="text/css">
-        </style>
-    </nav>
-</div>
-<p>
-    Hello welcome to the home page of Resume builder project
-</p>
-<div class="content">
-    <div class="first-content">
+    <div class="background">
+        <nav class="navbar">
+            <div class="logo"><img src="/Images/logo.jpg" alt="logo"></div>
+            <ul class="navlist">
+                <li><a href="/HTML/index.html">Home</a></li>
+                <li><a href="/HTML/AboutUs.html">About Us</a></li>
+                <li><a href="/HTML/CreateResume.html">Create Resume</a></li>
+                <li><a href="/HTML/login.html">SignUp/Login</a></li>
+            </ul>
+            <style type="text/css">
+            </style>
+        </nav>
+    </div>
+    <p>
+        Hello welcome to the home page of Resume builder project
+    </p>
+    <div class="content">
+        <div class="first-content">
 
+        </div>
+        <div class="second-content">
+            <img src="/Images/resume-image.png" alt="template">
+        </div>
     </div>
-    <div class="second-content">
-        <img src="" alt="">
-    </div>
-</div>
 </body>
 </html>
