--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -56,9 +56,13 @@
             </p>
 
         </div>
-    <p></p>    
+    <p></p>
     <hr>
-        <p><h1>Contact Us</h1></p>
+    </div>   
+</div>
+<div class="ContactUs">
+    <h1>Contact Us</h1>
+    <span class="border"></span>
 </div> 
 </body>
 </html>
