--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -60,9 +60,16 @@
     <hr>
     </div>   
 </div>
-<div class="ContactUs">
-    <h1>Contact Us</h1>
+<div class="WhatWeDo">
+    <h1>What We Do</h1>
     <span class="border"></span>
+    <p>We believe that landing a job and building the perfect resume should be simple. and that a poorly written resume should be the last reason for not getting the job that you want. 
+        <br> We’re dedicated to make sure that doesn’t happen. We aggregated millions of resumes for thousands of jobs and job descriptions from thousands of small businesses and large,
+        international companies like Amazon, Apple, Morgan Stanley, 
+        Goldman Sachs, and more.<br>
+        We don’t just rely on technology. We also have a team of certified resume writers, experts, hiring managers, and employers that assess resumes and job posts to make sure what our results are accurate and have the best chance for getting the job you want.</p>
+        
+        <hr>
 </div> 
 </body>
 </html>
