--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -67,7 +67,7 @@
         <br> We’re dedicated to make sure that doesn’t happen. We aggregated millions of resumes for thousands of jobs and job descriptions from thousands of small businesses and large,
         international companies like Amazon, Apple, Morgan Stanley, 
         Goldman Sachs, and more.<br>
-        We don’t just rely on technology. We also have a team of certified resume writers, experts, hiring managers, and employers that assess resumes and job posts to make sure what our results are accurate and have the best chance for getting the job you want.</p>
+        We don’t just rely on technology sag,jgjasg,jg,jsgg. We also have a team of certified resume writers, experts, hiring managers, and employers that assess resumes and job posts to make sure what our results are accurate and have the best chance for getting the job you want.</p>
         
         <hr>
 </div> 
