--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,16 +22,13 @@
             </style>
         </nav>
     </div>
-    <p>
-        Hello welcome to the home page of Resume builder project
-    </p>
-    <div class="content">
         <div class="first-content">
-
-        </div>
-        <div class="second-content">
             <img src="/Images/resume-image.png" alt="template">
+            <div class="content">
+                <h1>CREATE RESUME IN ONE CLICK</h1>
+                
+                <button class="create-btn">Create Resume</button>
+            </div>
         </div>
-    </div>
 </body>
 </html>
