--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/Images/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/CSS/style.css">
-    <title>ResumeBuilder some change</title>
+    <title>ResumeBuilder</title>
 </head> 
 <body>
     <div class="background">
