Contact Us Heading Added

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -70,6 +70,12 @@
         We don’t just rely dfabbvafdbff on technologya. We also have a team of certified resume writers, experts, hiring managers, and employers that assess resumes and job posts to make sure what our results are accurate and have the best chance for getting the job you want.</p>
         
         <hr>
+</div>
+<div class="Contact Us">
+    <h1>Contact Us</h1>
+    <span class="border"></span>
+    <p class="para-contactus"></p>
+
 </div> 
 </body>
 </html>
