--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -74,7 +74,7 @@
 <div class="Contact Us">
     <h1>Contact Us</h1>
     <span class="border"></span>
-    <p class="para-contactus"></p>
+    <p class="para-contactus form"></p>
 
 </div> 
 </body>
