--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,7 +31,7 @@
             <div class="content">
                 <h1>CREATE RESUME IN ONE CLICK</h1>
                 <p>
-                    Hello welcome to the home page of Resume   builder project
+                    Hello welcome to the home page of Resumesssssss   builder project
                 </p>
                 <p>
                     Hello welcome to the home page of Resume   builder project
