--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,12 +30,9 @@
             <img src="/Images/resume-image.png" alt="template">
             <div class="content">
                 <h1>CREATE RESUME IN ONE CLICK</h1>
-                <p>
-                    Hello welcome to the home page of Resume   builder project
-                </p>
-                <p>
-                    Hello welcome to the home page of Resume   builder project
-                </p>
+                <p>Hello welcome to the home page of Resume   builder project</p>
+                <p>Hello welcome to the home page of Resume   builder project</p>
+                <p>Our online resume creator lets you build a powerful resume from scratch.</p>
                 <button class="create-btn">Create Resume</button>
             </div>
         </div>
