--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,18 +22,13 @@
             </style>
         </nav>
     </div>
-    <p>
-        Hello welcome to the home page of Resume   builder project
-    </p>
     <div class="content">
         <div class="first-content">
             <img src="/Images/resume-image.png" alt="template">
             <div class="content">
                 <h1>CREATE RESUME IN ONE CLICK</h1>
-                <p>Hello welcome to the home page of Resume   builder project</p>
-                <p>Hello welcome to the home page of Resume   builder project</p>
                 <p>Our online resume creator lets you build a powerful resume from scratch.</p>
-                <button class="create-btn">Create Resume</button>
+                <a href="/HTML/CreateResume.html"><button class="create-btn">Create Resume</button></a>
             </div>
         </div>
 </body>
