contact us added color

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -71,8 +71,8 @@
         
         <hr>
 </div>
-<div class="Contact Us">
-    <h1>Contact Us</h1>
+<div class="ContactUs">
+    <h1>CONTACT US</h1>
     <span class="border"></span>
     <p class="para-contactus form"></p>
 
