--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/AboutUsStyle.css">
     <title>ResumeBuilder</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css" integrity="sha512-OdEXQYCOldjqUEsuMKsZRj93Ht23QRlhIb8E/X0sbwZhme8eUw6g8q7AdxGJKakcBbv7+/PX0Gc2btf7Ru8cZA==" crossorigin="anonymous" />
 </head>
 <body>
 <div class="background">
@@ -75,6 +76,11 @@
     <h1>CONTACT US</h1>
     <span class="border"></span>
     <p class="para-contactus form"></p>
+    <div class="icons">
+        <a href="">
+            <i class="fa fa-facebook"></i>
+        </a>
+    </div>
 
 </div> 
 </body>
