--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="/Images/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/CSS/style.css">
     <title>ResumeBuilder</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css" integrity="sha512-OdEXQYCOldjqUEsuMKsZRj93Ht23QRlhIb8E/X0sbwZhme8eUw6g8q7AdxGJKakcBbv7+/PX0Gc2btf7Ru8cZA==" crossorigin="anonymous" />
 </head> 
 <body>
     <div class="background">
