--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/AboutUsStyle.css">
     <title>ResumeBuilder</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM31on1gyExkL0=" crossorigin="anonymous" />
     
 </head>
 <body>
