--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,10 +25,13 @@
     <div class="content">
         <div class="first-content">
             <img src="/Images/resume-image.png" alt="template">
-            <div class="content">
+            <div class="content2">
                 <h1>CREATE RESUME IN ONE CLICK</h1>
                 <p>Our online resume creator lets you build a powerful resume from scratch.</p>
-                <a href="/HTML/CreateResume.html"><button class="create-btn">Create Resume</button></a>
+                <p>Our online resume creator lets you build a powerful resume from scratch.</p>
+                <p>Our online resume creator lets you build a powerful resume from scratch.</p>
+                <p>Our online resume creator lets you build a powerful resume from scratch.</p>
+                <a href="/HTML/CreateResume.html"><button class="create-btn">CREATE RESUME</button></a>
             </div>
         </div>
 </body>
