--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -80,8 +80,38 @@
     
 
 </div> 
-<div class="icons">
-    
-</div>
+<section id="contact">
+    <div class="contact container">
+        <div><h1 class="section-title">Contact <span>info</span></h1></div>
+        <div class="contact-items">
+            <div class="contact-item">
+                <div class="icon"><img src="icons8-phone-50.png"/></div>
+                <div class="contact-info">
+                    <h1>Phone</h1>
+                    <h2>+1 234 123 1234</h2>
+                    <h2>+1 234 123 1234</h2>
+                </div>
+            </div>
+                <div class="contact-items">
+                    <div class="contact-item">
+                        <div class="icon"><img src="icons8-phone-50.png"/></div>
+                        <div class="contact-info">
+                            <h1>Email</h1>
+                            <h2>+1 234 123 1234</h2>
+                            <h2>+1 234 123 1234</h2>
+                        </div>
+                    </div>
+                <div class="contact-items">
+                    <div class="contact-item">
+                        <div class="icon"><img src="icons8-phone-50.png"/></div>
+                        <div class="contact-info">
+                            <h1>Phone</h1>
+                            <h2>+1 234 123 1234</h2>
+                            <h2>+1 234 123 1234</h2>
+                        </div>
+                    </div>        
+        </div>
+    </div>
+</section>
 </body>
 </html>
