--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -85,7 +85,7 @@
         <div><h1 class="section-title">Contact <span>info</span></h1></div>
         <div class="contact-items">
             <div class="contact-item">
-                <div class="icon"><img src="icons8-phone-50.png"/></div>
+                <div class="icon"><img src="/Images/icons8-phone-50.png" alt=""></div>
                 <div class="contact-info">
                     <h1>Phone</h1>
                     <h2>+1 234 123 1234</h2>
@@ -94,20 +94,20 @@
             </div>
                 <div class="contact-items">
                     <div class="contact-item">
-                        <div class="icon"><img src="icons8-phone-50.png"/></div>
+                        <div class="icon"><img src="/Images/icons8-email-100.png"/></div>
                         <div class="contact-info">
                             <h1>Email</h1>
-                            <h2>+1 234 123 1234</h2>
-                            <h2>+1 234 123 1234</h2>
+                            <h2>info@gmail.com</h2>
+                            <h2>work@gmail.com</h2>
                         </div>
                     </div>
                 <div class="contact-items">
                     <div class="contact-item">
-                        <div class="icon"><img src="icons8-phone-50.png"/></div>
+                        <div class="icon"><img src="/Images/icons8-home-address-100.png"/></div>
                         <div class="contact-info">
-                            <h1>Phone</h1>
-                            <h2>+1 234 123 1234</h2>
-                            <h2>+1 234 123 1234</h2>
+                            <h1>Address</h1>
+                            <h2>Near GLA University, Chaumuha, Mathura, U.P.</h2>
+                            
                         </div>
                     </div>        
         </div>
