--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -82,7 +82,7 @@
 </div> 
 <section id="contact">
     <div class="contact container">
-        <div><h1 class="section-title">Contact <span>info</span></h1></div>
+        <div><h1 class="section-title"></h1></div>
         <div class="contact-items">
             <div class="contact-item">
                 <div class="icon"><img src="/Images/icons8-phone-50.png" alt=""></div>
