--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -10,6 +10,7 @@
     
 </head>
 <body>
+<div class ="main">    
 <div class="background">
     <nav class="navbar">
         <ul class="navlist">
@@ -113,5 +114,6 @@
         </div>
     </div>
 </section>
+</div>
 </body>
 </html>
