about us modification

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM31on1gyExkL0=" crossorigin="anonymous" />
     
 </head>
-<body>
-<div class ="main">    
+<body>   
 <div class="background">
     <nav class="navbar">
         <ul class="navlist">
@@ -81,7 +80,7 @@
     
 
 </div> 
-<section id="contact">
+<div class="contact">
     <div class="contact container">
         <div><h1 class="section-title"></h1></div>
         <div class="contact-items">
@@ -114,6 +113,5 @@
         </div>
     </div>
 </section>
-</div>
 </body>
 </html>
