create resume js folder added

--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -23,5 +23,6 @@
 <p>
     Hello welcome to the create resume page of Resume builder project
 </p>
+<script src="CreateResume.js"></script>
 </body>
 </html>
