change in navigation bar

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -8,19 +8,17 @@
     <title>ResumeBuilder</title>
 </head>
 <body>
-<div class="background">
-    <nav class="navbar">
-        <ul class="navlist">
+    <div class="background">
+        <nav class="navbar">
             <div class="logo"><img src="/Images/logo.jpg" alt="logo"></div>
-            <li><a href="/HTML/index.html">Home</a></li>
-            <li><a href="/HTML/AboutUs.html">About Us</a></li>
-            <li><a href="/HTML/CreateResume.html">Create Resume</a></li>
-            <li><a href="/HTML/login.html">SignUp/Login</a></li>
-        </ul>
-        <style type="text/css">
-        </style>
-    </nav>
-</div>
+            <ul class="navlist">
+                <li><a href="/HTML/index.html"><img src="https://img.icons8.com/android/20/000000/home.png"/>Home</a></li>
+                <li><a href="/HTML/AboutUs.html"><img src="https://img.icons8.com/android/20/000000/myspace.png"/>About Us</a></li>
+                <li><a href="/HTML/CreateResume.html"><img src="https://img.icons8.com/ios-glyphs/20/000000/document--v1.png"/>Create Resume</a></li>
+                <li><a href="/HTML/login.html"><img src="https://img.icons8.com/ios-glyphs/20/000000/user-male.png"/>SignUp/Login</a></li>
+            </ul>
+        </nav>
+    </div>
 <div class="login">
     <div class="login-box">
         <div class="btn-box">
