--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/Images/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/CSS/style.css">
+
     <title>ResumeBuilder</title>
 </head> 
 <body>
@@ -13,10 +14,10 @@
         <nav class="navbar">
             <div class="logo"><img src="/Images/logo.jpg" alt="logo"></div>
             <ul class="navlist">
-                <li><a href="/HTML/index.html">Home</a></li>
-                <li><a href="/HTML/AboutUs.html">About Us</a></li>
-                <li><a href="/HTML/CreateResume.html">Create Resume</a></li>
-                <li><a href="/HTML/login.html">SignUp/Login</a></li>
+                <li><a href="/HTML/index.html"><img src="https://img.icons8.com/android/20/000000/home.png"/>Home</a></li>
+                <li><a href="/HTML/AboutUs.html"><img src="https://img.icons8.com/android/20/000000/myspace.png"/>About Us</a></li>
+                <li><a href="/HTML/CreateResume.html"><img src="https://img.icons8.com/ios-glyphs/20/000000/document--v1.png"/>Create Resume</a></li>
+                <li><a href="/HTML/login.html"><img src="https://img.icons8.com/ios-glyphs/20/000000/user-male.png"/>SignUp/Login</a></li>
             </ul>
         </nav>
     </div>
