--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -75,7 +75,7 @@
                 <textarea rows="3" placeholder="Enter Here" class="form-control"></textarea>
             </div>
 
-            <div class="form-group mt-2">
+            <div class="form-group mt-2" id="we">
                 <label for="">Work Experience</label>
                 <textarea rows="3" placeholder="Enter Here" class="form-control weField"></textarea>
                 
