--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -86,11 +86,11 @@
                 </div>
             </div>
 
-            <div class="form-group mt-2">
+            <div class="form-group mt-2" id="aq">
                 <label for="">Academic Qualifications</label>
                 <textarea placeholder="Enter Here" class="form-control eqField"></textarea>
                 <div class="container text-center mt-3" id="aqAddButton">
-                    <button class="btn btn-dark btn-sm">Add</button>
+                    <button onclick="addNewAQField()" class="btn btn-dark btn-sm">Add</button>
                 </div>
             </div>
 
