--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -11,7 +11,7 @@
 <body>   
     <div class="background">
         <nav class="navbar">
-            <div class="logo"><img src="/Images/logo.jpg" alt="logo"></div>
+            <div class="logo"><a href="/HTML/index.html"><img src="/Images/logo.jpg" alt="logo"></a></div>
             <ul class="navlist">
                 <li><a href="/HTML/index.html"><img src="https://img.icons8.com/android/20/000000/home.png"/>Home</a></li>
                 <li><a href="/HTML/AboutUs.html"><img src="https://img.icons8.com/android/20/000000/myspace.png"/>About Us</a></li>
