--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -21,7 +21,7 @@
         </style>
     </nav>
 </div>
-<div class="container">
+<div class="container" id="cv-form">
     <h1 class="text-center my-2">Resume Builder</h1>
     <p class="text-center">By Rahul & Manish</p>
 
@@ -102,6 +102,23 @@
     </div>
 
 </div>
+
+
+<!--cv template-->
+<div class="container" id="">
+    <div class="row">
+        <div class="col-md-4">
+            <!--first column-->
+
+        </div>
+        <div class="col-md-8">
+            <!--second column-->
+            
+        </div>
+    </div>
+
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 <script src="/JavaScript/CreateResume.js"></script>
 </body>
