--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,10 +25,10 @@
             <img src="/Images/resume-image.png" alt="template">
             <div class="content2">
                 <h1>CREATE RESUME IN ONE CLICK</h1>
-                <p>Our online resume creator lets you build a powerful resume from scratch.</p>
-                <p>Our online resume creator lets you build a powerful resume from scratch.</p>
-                <p>Our online resume creator lets you build a powerful resume from scratch.</p>
-                <p>Our online resume creator lets you build a powerful resume from scratch.</p>
+                <h6><img src="/Images/tick-icon.jpg">Our online resume creator lets you build a powerful resume from scratch.<h6>
+                <h6><img src="/Images/tick-icon.jpg">Our online resume creator lets you build a powerful resume from scratch.<h6>
+                <h6>Our online resume creator lets you build a powerful resume from scratch.<h6>
+                <h6>Our online resume creator lets you build a powerful resume from scratch.<h6>
                 <a href="/HTML/CreateResume.html"><button class="create-btn">CREATE RESUME</button></a>
             </div>
         </div>
