--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -31,12 +31,12 @@
 
             <div class="col-md-6">
                 <!--FIRST COLUMN-->
-                
+                <h3>Personal Information</h3>
             </div>
 
             <div class="col-md-6">
                 <!--SECOND COLUMN-->
-
+                <h3>Professional Information</h3>
             </div>
 
         </div>
