name column and address box created

--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -32,6 +32,24 @@
             <div class="col-md-6">
                 <!--FIRST COLUMN-->
                 <h3>Personal Information</h3>
+
+                <div class="form-group">
+                    <label for="nameField">Your Name</label>
+                    <input type="text" id="nameField" placeholder="Enter Here" class="form-control">
+                </div>
+
+                
+                <div class="form-group mt-2">
+                    <label for="contactField">Contact Info</label>
+                    <input type="text" id="contactField" placeholder="Enter Here" class="form-control">
+                </div>
+
+                
+                <div class="form-group mt-2">
+                    <label for="addressField">Address</label>
+                    <input type="text" id="addressField" placeholder="Enter Here" class="form-control">
+                </div>
+
             </div>
 
             <div class="col-md-6">
