--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -47,8 +47,21 @@
                 
                 <div class="form-group mt-2">
                     <label for="addressField">Address</label>
-                    <input type="text" id="addressField" placeholder="Enter Here" class="form-control">
+                    <textarea type="text" id="addressField" placeholder="Enter Here" class="form-control"></textarea>
                 </div>
+
+                <p class="text-secondary my-3">Important Links</p>
+
+                <div class="form-group mt-2">
+                    <label for="linkedField">LinkedIn</label>
+                    <input type="text" id="linkedField" placeholder="Enter Here" class="form-control">
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="gitField">Github</label>
+                    <input type="text" id="gitField" placeholder="Enter Here" class="form-control">
+                </div>
+
 
             </div>
 
