--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -24,7 +24,7 @@
 
 
     <div class="container">
-        <h1 class ="text-center mt-2">Resume Generator</h1>
+        <h1 class ="text-center">Resume Generator</h1>
         <p class="text-center"><i>By Rahul&Manish</i></p>
 
         <div class="row">
@@ -68,8 +68,45 @@
             <div class="col-md-6">
                 <!--SECOND COLUMN-->
                 <h3>Professional Information</h3>
+
+                <div class="form-group mt-2">
+                    <label for="">Objective</label>
+                    <textarea type="text" placeholder="Enter Here" class="form-control"></textarea>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="">Work Experience</label>
+                    <textarea type="text" placeholder="Enter Here" class="form-control weField"></textarea>
+                </div>
+
+                <div class="container text-center mt-2 " id="weAddButton">
+                    <button class="btn btn-dark btn-sm">Add</button>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="">Academic Qualifications</label>
+                    <textarea type="text" placeholder="Enter Here" class="form-control aqField"></textarea>
+                </div>
+
+                <div class="container text-center mt-2" id="aqAddbutton">
+                    <button class="btn btn-dark btn-sm">Add</button>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="">Skills</label>
+                    <textarea type="text" placeholder="Enter Here" class="form-control skField"></textarea>
+                </div>
+
+                <div class="container text-center mt-2" id="skAddbutton">
+                    <button class="btn btn-dark btn-sm">Add</button>
+                </div>
+
             </div>
 
+        </div>
+
+        <div class="container text-center mt-3">
+            <button class="btn btn-dark btn-lg">Generate CV</button>
         </div>
     </div>
     
