js added for button

--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="container text-center mt-2 " id="weAddButton">
-                    <button class="btn btn-dark btn-sm">Add</button>
+                    <button onclick="addNewWEField()" class="btn btn-dark btn-sm">Add</button>
                 </div>
 
                 <div class="form-group mt-2">
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="container text-center mt-2" id="aqAddbutton">
-                    <button class="btn btn-dark btn-sm">Add</button>
+                    <button onclick="addNewAQField()" class="btn btn-dark btn-sm">Add</button>
                 </div>
 
                 <div class="form-group mt-2">
