--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -83,7 +83,7 @@
                     <button onclick="addNewWEField()" class="btn btn-dark btn-sm">Add</button>
                 </div>
 
-                <div class="form-group mt-2">
+                <div class="form-group mt-2" id="aq">
                     <label for="">Academic Qualifications</label>
                     <textarea type="text" placeholder="Enter Here" class="form-control aqField"></textarea>
                 </div>
@@ -92,13 +92,13 @@
                     <button onclick="addNewAQField()" class="btn btn-dark btn-sm">Add</button>
                 </div>
 
-                <div class="form-group mt-2">
+                <div class="form-group mt-2" id="sk">
                     <label for="">Skills</label>
                     <textarea type="text" placeholder="Enter Here" class="form-control skField"></textarea>
                 </div>
 
                 <div class="container text-center mt-2" id="skAddbutton">
-                    <button class="btn btn-dark btn-sm">Add</button>
+                    <button onclick="addNewSkField()" class="btn btn-dark btn-sm">Add</button>
                 </div>
 
             </div>
