--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -114,12 +114,36 @@
     <div class="container" id="cv-template">
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 text-center py-5 background">
                 <!--first column-->
+                <img src="/Images/defaultProfilePicture.jpg" alt="" class="img-fluid my-img">
+
+                <div class="container">
+                    <p>Rahul Saxena</p>
+                    <p>+91-12343545,+91-234235564</p>
+                    <p>12, sector43, jagriti vihar, Meerut</p>
+                    <hr>
+
+                    <p><a href="#1">https://www.linkedin.com/home</a></p>
+                    <p><a href="#2">https://github.com/</a></p>
+                </div>
             </div>
-            <div class="col-md-8">
+
+            <div class="col-md-8 py-5">
                 <!--second column-->
+                <h1 class="text-center" style="font-weight: 980">Rahul Saxena</h1>
+                
+                <!--Objective Card-->
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Objective</h3>
+                    </div>
+                    <div class="card-body">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt consectetur animi ut facere minima sit nobis quo at ullam, modi aliquid corporis dicta. Quidem eveniet, nihil consectetur, dolores reprehenderit provident deleniti quo fugit doloribus repellat est adipisci quae et incidunt, doloremque accusantium beatae placeat! Reprehenderit ratione dignissimos exercitationem ipsa hic.</p>
+                    </div>
+                </div>
             </div>
+
         </div>
 
     </div>
