--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -134,8 +134,8 @@
                 <h1 class="text-center" style="font-weight: 980">Rahul Saxena</h1>
                 
                 <!--Objective Card-->
-                <div class="card">
-                    <div class="card-header">
+                <div class="card mt-4">
+                    <div class="card-header background">
                         <h3>Objective</h3>
                     </div>
                     <div class="card-body">
