links and address function created

--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -121,7 +121,7 @@
                 <div class="container">
                     <p id="nameT1">Rahul Saxena</p>
                     <p id="contactT">+91-12343545,+91-234235564</p>
-                    <p class="addressT">12, sector43, jagriti vihar, Meerut</p>
+                    <p id="addressT">12, sector43, jagriti vihar, Meerut</p>
                     <hr>
 
                     <p><a id="linkedT" href="#1">https://www.linkedin.com/home</a></p>
