color correction done of CV

--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -9,7 +9,7 @@
     <title>ResumeBuilder</title>
 </head>
 <body>
-    <div class="background">
+    <div >
         <nav class="navbar">
             <div class="logo"><a href="/HTML/index.html"><img src="/Images/logo.jpg" alt="logo"></a></div>
             <ul class="navlist">
