work exprience error corrected

--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -74,12 +74,12 @@
                     <textarea id="ObjectiveField" type="text" placeholder="Enter Here" class="form-control"></textarea>
                 </div>
 
-                <div class="form-group mt-2">
+                <div class="form-group mt-2" id="we">
                     <label for="">Work Experience</label>
                     <textarea type="text" placeholder="Enter Here" class="form-control weField"></textarea>
                 </div>
 
-                <div class="container text-center mt-2 " id="weAddButton">
+                <div class="container text-center mt-2 " id="weAddbutton">
                     <button onclick="addNewWEField()" class="btn btn-dark btn-sm">Add</button>
                 </div>
 
